--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=base64:n5uhQuXB40ffqnknV2hM1mFPY37Xnx1dBSyiBXk4b4U=
+APP_KEY=base64:CZsoBQPp5X4j9yILh/8bKf0klkL4g8fqnH7vASXZfCU=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
 APP_URL=http://localhost
@@ -21,12 +21,13 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=cmswebdb
+DB_USERNAME=root
+DB_PASSWORD=
+
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
